# bevy_urdf

./: .gitmodules  Cargo.toml  Makefile  README.md
examples/: minimal.rs  panda.rs  sample.rs  show.rs
scripts/: bake_dae_matrix.py  flatten_dae.py  proto2urdf.py  xacro_expand.py
src/: big_space_root.rs  camera.rs  keyboard.rs  kinematics.rs  lib.rs  manipulation.rs  mesh.rs  overlays.rs  physics.rs  plugin.rs  robot.rs  ui.rs  urdf.rs
urdf/drake/allegro_hand_description/manipulation_compat/manipulation/models/: allegro_hand_description
urdf/drake/iiwa_description/manipulation_compat/manipulation/models/: iiwa_description
urdf/matlab/husky_description/urdf/: clearpathHusky_roundtrip.urdf
urdf/matlab/husky_description/urdf/.urdf2usd_rt/: Geometry.usda  Materials.usda  Physics.usda  husky.usda
urdf/oems/anymal_anybotics/anymal_b_simple_description/meshes/: anymal_foot.dae
