[package]
name = "bevy_urdf"
version = "0.0.1"
edition = "2024"
license = "MIT"

[dependencies]
rapier3d = "0.32"

# dimforge's URDF → rapier loader. Handles all primitive + mesh colliders
# (STL / OBJ / DAE) via its mesh-loader feature flags; also emits the
# correct joint-axis masks and mass properties from URDF `<inertial>`.
# We use its collider-building to drop my hand-rolled version in
# `physics.rs` (which mishandled joint axes and skipped mesh colliders).
rapier3d-urdf = { version = "0.13", features = ["stl", "collada", "wavefront"] }

# URDF parsing + forward/inverse kinematics. Same pairing upstream `urdf-viz`
# uses (k re-exports nalgebra, which is also rapier3d's linear algebra).
urdf-rs = "0.9"
k = "0.32"

# Mesh loading for URDF-referenced STL / OBJ / DAE files. `mesh-loader` is
# what urdf-viz uses and hands back vertex/normal/index arrays we feed to
# bevy::render::mesh::Mesh.
mesh-loader = "0.1.6"
rand = "0.10"

thiserror = "2"

# Used by the `urdf-viewer` binary for the "Browse…" file-picker button.
# Pulled in unconditionally because the binary is the crate's showcase.
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }

# Bevy + ecosystem. Declared once here with their full feature sets so
# every crate that needs Bevy pulls the SAME build (otherwise cargo
# would see distinct feature unions and rebuild bevy twice).
bevy = { version = "0.18", default-features = false, features = [
    "std",
    "async_executor",
    "multi_threaded",
    "bevy_asset",
    "bevy_state",
    "bevy_log",
    "bevy_window",
    "bevy_winit",
    "bevy_input_focus",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_light",
    "bevy_mesh",
    "bevy_camera",
    "bevy_image",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_scene",
    "default_font",
    "tonemapping_luts",
    "smaa_luts",
    "ktx2",
    "zstd_rust",
    "png",
    "x11",
    "reflect_auto_register",
] }
bevy_egui = { version = "0.39", default-features = false, features = [
    "default_fonts",
    "render",
] }
# Floating-origin: keeps f32 precision usable even when the world spans
# planet-sized distances.
big_space = { version = "0.12", features = ["i32", "camera"] }
# Gamepad input — polled each frame by `gearbox-viz::gamepad`.
gilrs = "0.11"

[[example]]
name = "sample"
path = "examples/sample.rs"

[[example]]
name = "minimal"
path = "examples/minimal.rs"

[[example]]
name = "panda"
path = "examples/panda.rs"

[[example]]
name = "show"
path = "examples/show.rs"

[[bin]]
name = "urdf-viewer"
path = "src/bin/urdf_viewer.rs"
