[package]
name = "bevy_urdf"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Pure URDF → Bevy library: parse, mesh-load, spawn, run forward kinematics. No physics, no UI, no camera."

[dependencies]
# URDF parsing + forward kinematics. `k` re-exports nalgebra; we feed
# the resolved isometries straight into per-link `Transform`s in
# `kinematics::sync_fk_to_transforms`. Same pairing upstream
# `urdf-viz` uses.
urdf-rs = "0.9"
k = "0.32"

# STL / OBJ / DAE loader for URDF `<mesh filename="…">`. Hands back
# vertex / normal / index arrays we feed to `bevy::render::mesh::Mesh`.
mesh-loader = "0.1.6"

# Typed errors at the library boundary.
thiserror = "2"

# Bevy. `default-features = false` so consumers' own `bevy =
# "0.18"` import controls the feature union — Cargo unifies and
# rebuilds Bevy once across the workspace. Only the features the
# library itself actually touches are listed here.
bevy = { version = "0.18", default-features = false, features = [
    "std",
    "async_executor",
    "multi_threaded",
    "bevy_asset",
    "bevy_log",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_light",
    "bevy_mesh",
    "bevy_camera",
    "bevy_image",
    "bevy_scene",
    "png",
    "jpeg",
] }
